--- a/backend/keycloak-theme/asiatravelplan/login/messages/messages_en.properties
+++ b/backend/keycloak-theme/asiatravelplan/login/messages/messages_en.properties
@@ -1,4 +1,4 @@
-loginTitle=Sign in to Chapter2 Backend
+loginTitle=Sign in to AsiaTravelPlan Backend
 doLogIn=Sign in
 username=Username
 password=Password
