better mobile login

--- a/backend/keycloak-theme/asiatravelplan/login/messages/messages_en.properties
+++ b/backend/keycloak-theme/asiatravelplan/login/messages/messages_en.properties
@@ -1,4 +1,8 @@
 loginTitle=Sign in to AsiaTravelPlan Backend
+loginAccountTitle=
 doLogIn=Sign in
 username=Username
+usernameOrEmail=Username
+usernameOrEmailLabel=Username
+usernameOrEmailOrPassword=Username or password
 password=Password
