--- a/backend/keycloak-theme/asiatravelplan/login/messages/messages_en.properties
+++ b/backend/keycloak-theme/asiatravelplan/login/messages/messages_en.properties
@@ -1,8 +1,8 @@
 loginTitle=Sign in to AsiaTravelPlan Backend
 loginAccountTitle=
 doLogIn=Sign in
-username=Username
-usernameOrEmail=Username
-usernameOrEmailLabel=Username
-usernameOrEmailOrPassword=Username or password
+username=User
+usernameOrEmail=User
+usernameOrEmailLabel=User
+usernameOrEmailOrPassword=User or password
 password=Password
